// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept some grid props 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: row;
  grid-gap: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

<div>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: row;
  grid-gap: 1rem;
}

<div>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
    456
  </div>
</div>
`;
